# 3d-quickhull

./: .gitignore  LICENSE  README.md  main.cpp  quickhull.h  quickhull_debug.h
example/: Makefile  bench.sh  command_line.cpp  libquickhull.c  log.txt  quickhull.c  random_generation.cpp
tests/: CMakeLists.txt  unit_tests.cpp
